--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "RedditData",
-  "version": "0.0.0",
+  "name": "WebCrawler",
+  "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "node service.js"
+    "start": "node crawl.js"
   },
   "description": "Collect data on r/all",
   "author": {
@@ -15,6 +15,7 @@
     "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
     "q": "~1.4.1",
-    "redis": "~2.4.2"
+    "redis": "~2.4.2",
+    "winston": "^2.3.0"
   }
 }
