--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email": "dennis@denniscalvert.net"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "azure-storage": "^1.3.1",
     "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
