--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.17.1",
     "azure-storage": "^1.3.1",
     "bluebird": "^3.4.6",
+    "body-parser": "^1.18.2",
     "cheerio": "^0.22.0",
     "express": "^4.16.2",
     "q": "~1.4.1",
